[package]
name = "web_clawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["blocking"] }    # high level HTTP client
eyre =  "0.6.6" 
select = "0.5"
url = "2.2.2"
log = "0.4.14"
env_logger = "0.9.0"

